@@ -123,6 +123,8 @@ $labels['viewsource'] = 'Pokaż źródło';
 $labels['markmessages'] = 'Oznacz wiadomość';
 $labels['markread'] = 'Jako przeczytaną';
 $labels['markunread'] = 'Jako nieprzeczytaną';
+$labels['markflagged'] = 'Jako oflagowaną';
+$labels['markunflagged'] = 'Jako nieoflagowaną';
 $labels['select'] = 'Zaznacz';
 $labels['all'] = 'Wszystkie';
 $labels['none'] = 'Anuluj';
